--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	</head>
 	<body>
 
-	<h1>My Website</h1>
-	<p>A website created by me.</p>
+	<h1>variable1</h1>
+	<p>variable2</p>
 
 	</body>
 	</html>
